<resources>
    <string name="app_name">pos printer</string>
    <string name="main_ver">Version</string>
    <string name="main_paper_out">Paper out</string>
    <string name="main_text">Print text</string>
    <string name="main_barcode">Print barcode</string>
    <string name="main_qr_code">Print QR code</string>
    <string name="main_pic">Print bitmap</string>
    <string name="main_lbl">Print label</string>
    <string name="main_lbl_learning">Label learning print</string>
    <string name="main_scan">Scanner</string>
    <string name="res_not_support">Current printer version is not support</string>

    <string name="result_sent_err">Send error</string>
    <string name="result_recv_err">Receiver error</string>
    <string name="result_timeout">communication timeout</string>
    <string name="result_params_err">Params error</string>
    <string name="result_unknown_err">Unknown error</string>
    <string name="result_device_not_conn">Device not connected</string>
    <string name="result_device_disconnect">Device disconnected</string>
    <string name="result_conn_err">Device connect error</string>
    <string name="result_device_connected">Device connected</string>
    <string name="result_device_not_support">Device not support</string>
    <string name="result_device_not_found">Device not found</string>
    <string name="result_device_open_err">Device open error</string>
    <string name="result_device_no_permission">Device no permission</string>
    <string name="result_bt_not_open">Bluetooth not open</string>
    <string name="result_bt_no_location">Location not open</string>
    <string name="result_bt_no_bonded">No bonded device</string>
    <string name="result_bt_scan_timeout">Bluetooth scan timeout</string>
    <string name="result_bt_scan_err">Bluetooth scan error</string>
    <string name="result_bt_scan_stop">Bluetooth stop scan</string>
    <string name="result_prn_cover_open">Printer cover open</string>
    <string name="result_prn_params_err">Printer params error</string>
    <string name="result_prn_no_paper">Printer no paper</string>
    <string name="result_prn_overheat">Printer overheat</string>
    <string name="result_prn_unknown_err">Printer unknown error</string>
    <string name="result_prn_printing">Printer is printing</string>
    <string name="result_prn_no_nfc">Printer no NFC</string>
    <string name="result_nfc_no_paper">Printer NFC no paper</string>
    <string name="result_prn_low_battery">Printer low battery</string>
    <string name="result_prn_locate_err">Printer locate error</string>
    <string name="result_prn_detect_err">Printer label detect error</string>
    <string name="result_prn_no_detect">Printer label not detected</string>
    <string name="result_unknown_cmd">Unknown error</string>

    <string name="print_text">I\'ve been living with a shadow overhead\nI\'ve been sleeping with a cloud above my bed\nI\'ve been lonely for so long\nTrapped in the past, I just can\'t seem to move on</string>
    <string name="asset_statements">
        [
          {
            \"relation\": [\"delegate_permission/common.handle_all_urls\"],
            \"target\": {
                \"namespace\": \"web\",
                \"site\": \"https://pay.staging.blink.sv\"
            }
          },
          {
            \"relation\": [\"delegate_permission/common.handle_all_urls\"],
            \"target\": {
                \"namespace\": \"web\",
                \"site\": \"https://pay.staging.galoy.io\"
            }
          },
          {
            \"relation\": [\"delegate_permission/common.handle_all_urls\"],
            \"target\": {
                \"namespace\": \"web\",
                \"site\": \"https://pay.blink.sv\"
            }
          },
          {
            \"relation\": [\"delegate_permission/common.handle_all_urls\"],
            \"target\": {
                \"namespace\": \"web\",
                \"site\": \"https://pay.mainnet.galoy.io\"
            }
          },
          {
            \"relation\": [\"delegate_permission/common.handle_all_urls\"],
            \"target\": {
                \"namespace\": \"web\",
                \"site\": \"https://voucher.staging.blink.sv\"
            }
          },
          {
            \"relation\": [\"delegate_permission/common.handle_all_urls\"],
            \"target\": {
                \"namespace\": \"web\",
                \"site\": \"https://voucher.blink.sv\"
            }
          }
        ]
    </string>

</resources>